# backend

./: .env  Cargo.toml
src/: config.rs  error.rs  main.rs
src/api/: article.rs  mod.rs  user.rs
src/db/: mod.rs
src/enums/: error.rs
src/models/: article.rs  mod.rs  user.rs
src/services/: article_service.rs
src/tests/: article_tests.rs  user_tests.rs
src/utils/: mod.rs
