[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
time = "0.3.37"
uuid = { version = "1.12.0", features = ["md5", "v4"] }
thiserror = "2.0.11"
tokio = "1.43.0"
